--- a/CollectIt.Tests/CollectIt.Tests.csproj
+++ b/CollectIt.Tests/CollectIt.Tests.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HashSetTests.cs" />
+    <Compile Include="LinkedListTests.cs" />
     <Compile Include="ListTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueTests.cs" />
