--- a/CollectIt.Tests/CollectIt.Tests.csproj
+++ b/CollectIt.Tests/CollectIt.Tests.csproj
@@ -49,11 +49,13 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DictionaryTests.cs" />
     <Compile Include="HashSetTests.cs" />
     <Compile Include="LinkedListTests.cs" />
     <Compile Include="ListTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueTests.cs" />
+    <Compile Include="SortedTests.cs" />
     <Compile Include="StackTests.cs" />
   </ItemGroup>
   <ItemGroup>
